--- a/LiveFFTGraph/index.html
+++ b/LiveFFTGraph/index.html
@@ -5,11 +5,11 @@
 		<script src="bundle.js"></script>
 	</head>
 	<body>
+        <div>
+            <input type="file" id="inputFile">
+        </div>
 		<div>
-			<button id="btnPlay">Play Clip</button>
-		</div>
-		<div>
-			<canvas id="chart" width="1000" height="800"></canvas>
+			<canvas id="chart" width="1000" height="700"></canvas>
 		</div>
 	</body>
 </html>
